<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ /** Copyright (c) 2022 船山信息 chuanshaninfo.com
  ~ OkStack is licensed under Mulan PubL v2.
  ~ You can use this software according to the terms and conditions of the Mulan
  ~ PubL v2. You may obtain a copy of Mulan PubL v2 at:
  ~          http://license.coscl.org.cn/MulanPubL-2.0
  ~ THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND,
  ~ EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT,
  ~ MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
  ~ See the Mulan PubL v2 for more details.
  ~ */
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.okstar.platform</groupId>
        <artifactId>modules</artifactId>
        <version>${revision}</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <artifactId>module-org</artifactId>
    <build>
        <finalName>${artifactId}</finalName>
    </build>
    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <db.name>okstack_module_org</db.name>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.okstar.platform</groupId>
            <artifactId>common-base</artifactId>
            <version>${revision}</version>
        </dependency>
        <dependency>
            <groupId>org.okstar.platform</groupId>
            <artifactId>common-jpa</artifactId>
            <version>${revision}</version>
        </dependency>
        <dependency>
            <groupId>org.okstar.platform</groupId>
            <artifactId>module-system-api</artifactId>
            <version>${revision}</version>
        </dependency>

        <dependency>
            <groupId>org.okstar.platform</groupId>
            <artifactId>module-org-api</artifactId>
            <version>${revision}</version>
        </dependency>

        <dependency>
            <groupId>org.okstar.platform.auth</groupId>
            <artifactId>module-auth-api</artifactId>
            <version>${revision}</version>
        </dependency>

        <dependency>
            <groupId>org.okstar.platform</groupId>
            <artifactId>OkCloud-API-Client</artifactId>
            <version>1.0-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>

    </dependencies>
</project>
